# ros_geomagic_touch_phantom_omni

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
PhantomOmni/PhantomOmni/omni_controller/include/RobotBase/: RobotBase.h
PhantomOmni/PhantomOmni/omni_controller/include/node/: Omni.h  omni_controller.h
PhantomOmni/PhantomOmni/omni_controller/launch/: omni_controller.launch
PhantomOmni/PhantomOmni/raw_omni/cfg/: omni.rviz  single_omni.rviz
PhantomOmni/PhantomOmni/raw_omni/include/: omnibase.h  omnifirewire.h  raw_omni_driver.h
PhantomOmni/PhantomOmni/raw_omni/src/: omnibase.cpp  omnifirewire.cpp
PhantomOmni/omni/: CMakeLists.txt
PhantomOmni/omni_controller/: CMakeLists.txt
PhantomOmni/omni_controller/src/node/: Omni.cpp
PhantomOmni/omni_fw_description/urdf/: omni.urdf
PhantomOmni/raw_omni/: CMakeLists.txt  LICENSE.md
PhantomOmni/raw_omni/cfg/: multi_omni.rviz
PhantomOmni/raw_omni/include/: omnibase.h  omnifirewire.h
PhantomOmni/raw_omni/launch/: multi_omni.launch
PhantomOmni/raw_omni/src/: omnibase.cpp  omnifirewire.cpp
omni/: package.xml
omni_controller/: CMakeLists.txt  package.xml
omni_controller/cfg/: omni.rviz
omni_controller/include/node/: omni_controller.h
omni_controller/launch/: omni_controller.launch
omni_controller/src/RobotBase/: RobotBase.cpp
omni_controller/src/node/: omni_controller.cpp
omni_controller/src/test/: main.cpp
omni_description/: CMakeLists.txt  package.xml
omni_description/urdf/: omni.urdf
omni_driver/: CMakeLists.txt  package.xml
omni_driver/cfg/: doxygen_omni_driver.cfg
omni_driver/cfg/html/: index.html
omni_driver/cfg/latex/: refman.tex
omni_driver/doc/html/: annotated.html  classOmniBase-members.html  classOmniBase.html  classOmniEthernet-members.html  classOmniEthernet.html  classOmniFirewire-members.html  classOmniFirewire.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  md_LICENSE.html  omnibase_8h_source.html  omniethernet_8h_source.html  omnifirewire_8h_source.html  pages.html  structOmniBase_1_1OmniState-members.html  structOmniBase_1_1OmniState.html  structOmniFirewire_1_1OmniInfo-members.html  structOmniFirewire_1_1OmniInfo.html
omni_driver/doc/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  classes_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  search.js  typedefs_0.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js
omni_driver/doc/latex/: annotated.tex  classOmniBase.eps  classOmniBase.tex  classOmniEthernet.eps  classOmniEthernet.tex  classOmniFirewire.eps  classOmniFirewire.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  hierarchy.tex  md_LICENSE.tex  refman.tex  structOmniBase_1_1OmniState.tex  structOmniFirewire_1_1OmniInfo.tex
omni_driver/include/: omnibase.h  omniethernet.h  omnifirewire.h  omniusb.h  raw1394msg.h
omni_driver/include/driver/: ethernet_driver.hpp  firewire_driver.hpp  link.hpp  omni_driver.hpp
omni_driver/include/math/: moving_average.hpp  omni_math.hpp
omni_driver/include/ros/: omni_ros_interface.hpp
omni_driver/include/util/: typedefs.hpp
omni_driver/launch/: ethernet.launch  ethernet_rviz.launch  ethernet_slave.launch  firewire.launch  firewire_rviz.launch  firewire_slave.launch  omni.launch  omni_manual.launch  usb.launch
omni_driver/msg/: TeleopControl.msg
omni_driver/src/: omnibase.cpp  omnibase.cpp.orig  omniethernet.cpp  omnifirewire.cpp  omninode.cpp  omniusb.cpp  raw1394msg.cpp  raw_omni.cpp  raw_omni_driver.cpp  test_omnibase.cpp
omni_driver/src/driver/: ethernet_driver.cpp  firewire_driver.cpp  omni_driver.cpp  raw1394msg.cpp
omni_driver/src/math/: moving_average.cpp  omni_math.cpp
omni_driver/src/ros/: omni_ros_interface.cpp
omni_fw_description/: CMakeLists.txt  package.xml
omni_moveit/: .setup_assistant  CMakeLists.txt  package.xml
omni_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  phantom_omni.srdf
omni_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  omni_moveit_controller_manager.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
raw_omni/: CMakeLists.txt  package.xml
raw_omni/include/: omnibase.h  omnifirewire.h
raw_omni/launch/: single_omni.launch
raw_omni/msg/: OmniButtonEvent.msg
raw_omni/src/: omnibase.cpp  omnifirewire.cpp  raw_omni.cpp  raw_omni_driver.cpp  raw_omni_driver.h
