<?xml version="1.0"?>
<package>
  <name>omni_fw_description</name>
  <description>The omni_description firmware version package</description>
	<version>1.0.0</version>
  <maintainer email="brunogbv@poli.ufrj.br">Bruno Guilhermo de Barros Valerio</maintainer>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

</package>
