<?xml version="1.0"?>
<package>
  <name>raw_omni</name>
  <version>1.0.0</version>
  <description>The raw_omni package</description>

  <maintainer email="brunogbv@poli.ufrj.br">Bruno Guilhermo de Barros Valerio</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>omni_description</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>omni_description</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
</package>
